# mcp-trust-gateway

./: LICENSE  README.md  SPEC.md  environment.yml  pyproject.toml  requirements.txt  smoke_test.py
examples/: claude_desktop.md  cursor_config.md  multi_hop_demo.py
src/mcp_trust_gateway/: __init__.py  __main__.py  config.py  proxy.py  server.py
src/mcp_trust_gateway/discovery/: __init__.py  registry.py  well_known.py
src/mcp_trust_gateway/federation/: __init__.py  health_monitor.py  registry.py  trust_discount.py  well_known.py
src/mcp_trust_gateway/oauth/: __init__.py  metadata.py  provider.py  token_exchange.py
src/mcp_trust_gateway/trust/: __init__.py  evaluator.py  scope_mapper.py  trust_decay.py
tests/: test_evaluator.py  test_scope_mapper.py  test_server.py  test_token_exchange.py  test_trust_decay.py
